add+fix: one problem solved 100 more
v0.0.5